fix dropdown z-index issue

--- a/src/components/Dropdown/_Dropdown.scss
+++ b/src/components/Dropdown/_Dropdown.scss
@@ -1,6 +1,7 @@
 .dropdown {
     margin-top: 1.5rem;
     position: relative;
+    z-index: 2;
     &-toggle {
         cursor: pointer;
         box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
